# learningcenter_fastapi_backend

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: env.py
alembic/versions/: 40d0d41590d8_add_enrollment_schedule_attendance_.py  6344fbcd1493_initial_setup_with_aligned_schema.py  a1b2c3d4e5f6_add_health_check_logs.py  c0def50a7dd9_initial_migration.py  d819f6705856_add_assignments_and_submissions.py
app/: main.py
app/api/: deps.py
app/api/v1/: admin_router.py  assignments_router.py  auth_router.py  courses_router.py  enrollments_router.py  submissions_router.py  users_router.py
app/core/: config.py  storage.py
app/db/: init_db.py
app/models/: assignment.py  attendance.py  billing.py  course.py  enrollment.py  health_check.py  message.py  schedule.py  user.py  user_role.py
app/schemas/: admin.py  assignment.py  course.py  enrollment.py  token.py  user.py
app/services/: enrollment_service.py  user_service.py
